Commented in most of the BaseData tests. Adding more.